--- a/_config.yml
+++ b/_config.yml
@@ -22,13 +22,13 @@ social:
 # 百度统计
 # 使用博客模板请去掉或者更换 id
 baidu:
-    id: 8ba1c6be0953b6f9c2ba38e57f615421
+    id: cfcf55bfd5654ebfcc52610f6fc31271
 
 # Google Analytics
 # 使用博客模板请去掉或者更换 id
-ga:
-    id: UA-84134159-3
-    host: auto
+# ga:
+#     id: UA-84134159-3
+#     host: auto
 
 permalink: /:year/:month/:title/
 # Format
