--- a/_config.yml
+++ b/_config.yml
@@ -26,9 +26,9 @@ baidu:
 
 # Google Analytics
 # 使用博客模板请去掉或者更换 id
-# ga:
-#     id: UA-84134159-3
-#     host: auto
+ga:
+    id: UA-140814370-2
+    host: auto
 
 permalink: /:year/:month/:title/
 # Format
