--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ baseurl: ""         # for example, '/blog' if your blog hosted on 'host/blog'
 # SNS settings
 RSS: false
 github_username:    NikFranki
-twitter_username:   franki
+twitter_username:   8024ldbryant
 
 
 
