--- a/_config.yml
+++ b/_config.yml
@@ -3,35 +3,29 @@ title: franki Blog
 SEOTitle: franki的博客 | franki Blog
 header-img: images/home-bg.jpg
 email: 8024ldbryant@gmail.com
-description: ""
-keyword: ""
-url: "https://nikfranki.github.io/"              # your host, for absolute URL
-baseurl: ""         # for example, '/blog' if your blog hosted on 'host/blog'
-
-
+description: ''
+keyword: ''
+url: 'https://nikfranki.github.io/' # your host, for absolute URL
+baseurl: '' # for example, '/blog' if your blog hosted on 'host/blog'
 
 # SNS settings
 RSS: false
-github_username:    NikFranki
-twitter_username:   8024ldbryant
-
-
+github_username: NikFranki
+twitter_username: 8024ldbryant
 
 # Build settings
 # from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
 highlighter: rouge
 permalink: pretty
 paginate: 10
-exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
-anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
-
-
+exclude: ['less', 'node_modules', 'Gruntfile.js', 'package.json', 'README.md']
+anchorjs: true # if you want to customize anchor. check out line:181 of `post.html`
 
 # Gems
 # from PR#40, to support local preview for Jekyll 3.0
-plugins: [jekyll-paginate]
-
-
+plugins:
+    - jekyll-feed
+    - jekyll-paginate
 
 # Markdown settings
 # replace redcarpet to kramdown,
@@ -39,8 +33,7 @@ plugins: [jekyll-paginate]
 # document: http://jekyllrb.com/docs/configuration/#kramdown
 markdown: kramdown
 kramdown:
-  input: GFM                            # use Github Flavored Markdown !important
-
+    input: GFM # use Github Flavored Markdown !important
 
 # Disqus settings
 # disqus_username: franki
@@ -51,34 +44,21 @@ gittalk_username: franki
 # Share component is depend on Comment so we can NOT use share only.
 # duoshuo_share: true                     # set to false if you want to use Comment without Sharing
 
-
-
 # Analytics settings
 # Baidu Analytics
 ba_track_id: cfcf55bfd5654ebfcc52610f6fc31271
 # Google Analytics
-ga_track_id: 'UA-140814370-2'            # Format: UA-xxxxxx-xx
+ga_track_id: 'UA-140814370-2' # Format: UA-xxxxxx-xx
 ga_domain: auto
 
-
-
 # Sidebar settings
-sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "学如逆水行舟，不进则退"
-sidebar-avatar: /images/avatar-franki.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
-
-
+sidebar: true # whether or not using Sidebar.
+sidebar-about-description: '学如逆水行舟，不进则退'
+sidebar-avatar: /images/avatar-franki.jpg # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
-featured-tags: true                     # whether or not using Feature-Tags
-featured-condition-size: 1              # A tag will be featured if the size of it is more than this condition value
-
-
+featured-tags: true # whether or not using Feature-Tags
+featured-condition-size: 1 # A tag will be featured if the size of it is more than this condition value
 
 # Friends
-# friends: [
-#     {
-#         title: "Hux Blog",
-#         href: "http://huangxuan.me"
-#     }
-# ]
+friends: [{ title: '廖帅', href: 'http://www.sysuleo.com/' }]
